# MGRS

./: CMakeLists.txt  Colors.h  CoreVulkanUtilis.c  CoreVulkanUtilis.h  Global.c  Global.h  KeymapSettings.c  KeymapSettings.h  LICENSE  Main.c  Main.h  README.md  VulkanErrorMacro.h  Window.c  Window.h  main.c  shaders.c  shaders.h  test.c  test.h
Notes-Info/: vulkan_layers_extensions.csv
glad/: glad.c  glad.h
shader/: GridShader.frag  OrthogonalProjectionShader.glsl
